Ensure CKBox dialog is visible in fullscreen mode.

--- a/packages/ckeditor5-fullscreen/theme/fullscreen.css
+++ b/packages/ckeditor5-fullscreen/theme/fullscreen.css
@@ -15,6 +15,11 @@ body.ck-fullscreen {
 	--ck-z-panel: calc(var(--ck-z-default) + 999);
 	--ck-z-dialog: 100000;
 
+	/* CKBox wrapper has z-index of 9999, let's bump it over the dialog's to ensure visibility like outside fullscreen mode. */
+	& .ckbox-reset:not(#n)>.ckbox--dialog {
+		--ckbox-z-index-root: calc(var(--ck-z-dialog) + 1);
+	}
+
 	& .ck-pagination-view-line {
 		z-index: calc(var(--ck-z-fullscreen) + 1);
 	}
